# P02_Handbox

./: .env.example  .gitignore  CONTRIBUTING.md  DEV_SETUP.md  LICENSE  README.md  build_frontend.ps1  check_env.ps1  check_rust.ps1  install_deps.ps1  install_tauri.ps1  package-lock.json  requirements.txt  setup_all.ps1  지시.txt
Handbox/: CLAUDE.md  DEVLOG.md  (+5 more)
Handbox/src-tauri/: Cargo.toml  tauri.conf.json
Handbox/src-tauri/icons/: icon.icns
Handbox/src-tauri/prompts/: field_system.txt  novelty_system.txt  progress_system.txt
Handbox/src-tauri/src/: main.rs
Handbox/src-tauri/src/agents/: mod.rs
Handbox/src-tauri/src/aws/: mod.rs
Handbox/src-tauri/src/commands/: agent.rs  aws_service.rs  cli.rs  credentials.rs  data_loader.rs  file_system.rs  knowledge_base.rs  local_storage.rs  mcp.rs  memory_db.rs  mod.rs  persona_db.rs  plugin_manager.rs  tool_doc.rs  tool_io.rs  tool_process.rs  tool_storage.rs  tool_transform.rs  vector_store.rs  workflow.rs  workflow_stress_test.rs  workflow_test.rs
Handbox/src-tauri/src/tools/: doc_parsers.rs  json_query.rs  mod.rs  template_engine.rs  text_chunker.rs  vector_index.rs
handbox-v2/: .gitignore  Cargo.toml  pdf_analysis_workflow.json
handbox-v2/.github/workflows/: ci.yml
handbox-v2/crates/hb-compiler/: Cargo.toml
handbox-v2/crates/hb-compiler/src/: classifier.rs  lib.rs  llm_fallback.rs  slot_filler.rs  template.rs  type_checker.rs  validator_inserter.rs
handbox-v2/crates/hb-core/: Cargo.toml
handbox-v2/crates/hb-core/src/: lib.rs
handbox-v2/crates/hb-core/src/graph/: mod.rs
handbox-v2/crates/hb-core/src/pack/: mod.rs
handbox-v2/crates/hb-core/src/policy/: mod.rs
handbox-v2/crates/hb-core/src/project/: mod.rs
handbox-v2/crates/hb-core/src/tool/: mod.rs
handbox-v2/crates/hb-core/src/trace/: mod.rs
handbox-v2/crates/hb-mcp/: Cargo.toml
handbox-v2/crates/hb-mcp/src/: client.rs  lib.rs  registry.rs  server.rs
handbox-v2/crates/hb-mcp/src/agent_runtime/: mod.rs
handbox-v2/crates/hb-mcp/src/connector/: mod.rs
handbox-v2/crates/hb-mcp/src/index/: mod.rs
handbox-v2/crates/hb-policy/: Cargo.toml
handbox-v2/crates/hb-policy/src/: budget.rs  engine.rs  lib.rs  whitelist.rs
handbox-v2/crates/hb-project/: Cargo.toml
handbox-v2/crates/hb-project/src/: lib.rs
handbox-v2/crates/hb-runner/: Cargo.toml
handbox-v2/crates/hb-runner/src/: cache.rs  context.rs  lib.rs  partial.rs  retry.rs  scheduler.rs
handbox-v2/crates/hb-tauri/: Cargo.toml  tauri.conf.json
handbox-v2/crates/hb-tauri/capabilities/: default.json
handbox-v2/crates/hb-tauri/src/: main.rs  state.rs
handbox-v2/crates/hb-tauri/src/commands/: agent.rs  agent_loop.rs  collaboration.rs  compiler.rs  execution.rs  gis.rs  ifc.rs  llm.rs  marketplace.rs  mcp.rs  mod.rs  pack.rs  project.rs  system_tools.rs  tool.rs  trace.rs  vector_store.rs  workflow.rs
handbox-v2/crates/hb-tool-executor/: Cargo.toml
handbox-v2/crates/hb-tool-executor/src/: docker.rs  lib.rs  local.rs  python.rs  timeout.rs  wasm.rs
handbox-v2/crates/hb-trace/: Cargo.toml
handbox-v2/crates/hb-trace/src/: export.rs  lib.rs  query.rs  store.rs
handbox-v2/docs/: CLAUDE_CODE_ARCHITECTURE.md  VISUAL_CLAUDE_CODE_BEYOND.md  VISUAL_CLAUDE_CODE_STRATEGY.md
handbox-v2/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
handbox-v2/frontend/src/: App.tsx  index.css  main.tsx
handbox-v2/frontend/src/__mocks__/: tauri-api.ts  tauri-core.ts  tauri-event.ts
handbox-v2/frontend/src/__tests__/: agent-chat.test.tsx  markdown-render.test.tsx  setup.ts  tauri-utils.test.ts
handbox-v2/frontend/src/components/agent/: AgentChatPanel.tsx  AgentPanel.tsx  ProjectSelector.tsx  index.ts
handbox-v2/frontend/src/components/collaboration/: CollaborationPanel.tsx  index.ts
handbox-v2/frontend/src/components/comparison/: ModelComparison.tsx  index.ts
handbox-v2/frontend/src/components/compiler/: CompilerPanel.tsx
handbox-v2/frontend/src/data/: catalogLoader.ts  catalogTypes.ts  fusionToolCatalog.ts  gisToolCatalog.ts  ifcToolCatalog.ts  index.ts  toolCatalog.ts
handbox-v2/frontend/src/hooks/: useExecution.ts  useGraph.ts  useIsVisible.ts  useTrace.ts
handbox-v2/frontend/src/services/: AgentCanvasBridge.ts  AgentCommunication.ts  AgentOrchestrator.ts  CollaborationService.ts  ErrorRecovery.ts  GisIfcFusionService.ts  GisService.ts  IfcService.ts  McpPluginService.ts  PartialExecution.ts  PreviewDetector.ts  TauriAgentService.ts  TauriCollaborationService.ts  TauriMarketplaceService.ts  TauriMcpService.ts  TraceConverter.ts  WorkflowAgentBridge.ts  WorkflowStorage.ts  canvasExecutor.ts  index.ts
handbox-v2/frontend/src/stores/: agentStore.ts  collaborationStore.ts  comparisonStore.ts  executionStore.ts  llmStore.ts  marketplaceStore.ts  mcpStore.ts  previewStore.ts  projectStore.ts  toolRegistryStore.ts  traceStore.ts  workflowLibraryStore.ts  workflowStore.ts
handbox-v2/frontend/src/testing/: ExperienceBuffer.ts  MultiTurnHandler.ts  PolicyNetwork.ts  RLIntegration.ts  RLLogger.ts  RLSimulationSystem.ts  RewardCalculator.ts  SupervisorAgent.ts  index.ts  runRLTest.ts
handbox-v2/frontend/src/types/: RLTypes.ts  agent.ts  comparison.ts  gis.ts  graph.ts  ifc.ts  index.ts  llm.ts  marketplace.ts  mcp.ts  pack.ts  policy.ts  preview.ts  tool.ts  trace.ts  workflow.ts
handbox-v2/frontend/src/utils/: tauri.ts
handbox-v2/packs/core-tools/: manifest.json
handbox-v2/packs/core-tools/tools/: condition.json  csv-read.json  data-filter.json  delay.json  display-output.json  embedding.json  file-read.json  file-write.json  json-parse.json  json-path.json  llm-chat.json  llm-summarize.json  loop.json  merge.json  regex-extract.json  reranker.json  text-merge.json  text-split.json  text-template.json  to-excel.json  to-pdf.json  user-input.json  vector-search.json  vector-store.json
handbox-v2/schemas/: graph-dsl-v0.1.json  pack-manifest-v0.1.json  tool-interface-v0.1.json
handbox-v2/simulations/construction_tech_evaluation/: evaluation.py  expert.py  knowledge_base.py  proposal.py  simulation.py
(+314 files in other folders)
