[workspace]
resolver = "2"
members = [
    "crates/hb-core",
    "crates/hb-compiler",
    "crates/hb-runner",
    "crates/hb-trace",
    "crates/hb-policy",
    "crates/hb-tool-executor",
    "crates/hb-mcp",
    "crates/hb-project",
    "crates/hb-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Handbox Team"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
jmespath = "0.3"
async-recursion = "1"

# HTTP & AWS
reqwest = { version = "0.12", features = ["json", "native-tls"] }
hmac = "0.12"
base64 = "0.22"
dirs = "5"
url = "2"
urlencoding = "2"

# Internal crates
hb-core = { path = "crates/hb-core" }
hb-compiler = { path = "crates/hb-compiler" }
hb-runner = { path = "crates/hb-runner" }
hb-trace = { path = "crates/hb-trace" }
hb-policy = { path = "crates/hb-policy" }
hb-tool-executor = { path = "crates/hb-tool-executor" }
hb-mcp = { path = "crates/hb-mcp" }
hb-project = { path = "crates/hb-project" }
