[package]
name = "handbox"
version = "1.0.0"
description = "Handbox - AI 기반 워크플로우 자동화 플랫폼"
authors = ["Handbox Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# AWS SDK for Rust
aws-config = "1.1"
aws-sdk-s3 = "1.12"
aws-sdk-bedrockruntime = "1.10"
aws-sdk-opensearchserverless = "1.10"
aws-sdk-translate = "1.10"
aws-sdk-comprehend = "1.10"
aws-sdk-textract = "1.10"

# 유틸리티
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"

# HTTP 클라이언트 (외부 API 호출용)
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# 문서 처리 라이브러리
pdf-extract = "0.7"                                    # PDF 텍스트 추출
printpdf = "0.7"                                       # PDF 생성
calamine = "0.26"                                      # Excel 읽기 (xlsx, xls, ods)
rust_xlsxwriter = "0.79"                              # Excel 생성
docx-rs = "0.4"                                        # Word 문서 생성
ppt-rs = "0.1"                                         # PowerPoint 생성
hwpers = "0.3"                                         # HWP 한글 문서 생성
csv = "1.3"                                            # CSV 처리
quick-xml = "0.37"                                     # XML 처리 개선

# AWS SDK HTTP 클라이언트 - native-tls 사용 (Windows 시스템 인증서)
aws-smithy-runtime = { version = "1.7", features = ["client", "connector-hyper-0-14-x"] }
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
