[package]
name = "handbox"
version = "1.0.0"
description = "Handbox - 샌드박스형 AI 시각화 및 에이전트 설계 플랫폼"
authors = ["Handbox Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# AWS SDK for Rust
aws-config = "1.1"
aws-sdk-s3 = "1.12"
aws-sdk-bedrockruntime = "1.10"
aws-sdk-opensearchserverless = "1.10"
aws-sdk-translate = "1.10"
aws-sdk-comprehend = "1.10"
aws-sdk-textract = "1.10"

# 유틸리티
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"

# Credential Vault (OS 키체인 기반 보안 저장소)
keyring = "2"

# HTTP 클라이언트 (외부 API 호출용)
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# 문서 처리 라이브러리
pdf-extract = "0.7"                                    # PDF 텍스트 추출
printpdf = "0.7"                                       # PDF 생성
calamine = "0.26"                                      # Excel 읽기 (xlsx, xls, ods)
rust_xlsxwriter = "0.79"                              # Excel 생성
docx-rs = "0.4"                                        # Word 문서 생성
ppt-rs = "0.1"                                         # PowerPoint 생성
hwpers = "0.3"                                         # HWP 한글 문서 생성
csv = "1.3"                                            # CSV 처리
quick-xml = "0.37"                                     # XML 처리 개선

# 로컬 저장소 (Phase 3)
rusqlite = { version = "0.32", features = ["bundled"] }  # SQLite 임베디드

# === Tier 1 도구 시스템 ===
# 인코딩 감지/변환
encoding_rs = "0.8"

# 파일 타입 감지
infer = "0.16"

# 파일 탐색
glob = "0.3"
walkdir = "2"

# HTML 파싱
scraper = "0.20"

# 정규식
regex = "1"

# base64 인코딩 (바이너리 파일 전달용)
base64 = "0.22"

# AWS SDK HTTP 클라이언트 - native-tls 사용 (Windows 시스템 인증서)
aws-smithy-runtime = { version = "1.7", features = ["client", "connector-hyper-0-14-x"] }
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
