[package]
name = "hb-compiler"
description = "Prompt → WorkflowSpec compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = "1"
