[package]
name = "hb-project"
description = "Project/Workspace management — per-project data sources, indexes, settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
