[package]
name = "hb-tauri"
description = "Handbox v2 Tauri application shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hb-core = { workspace = true }
hb-compiler = { workspace = true }
hb-runner = { workspace = true }
hb-trace = { workspace = true }
hb-policy = { workspace = true }
hb-tool-executor = { workspace = true }
hb-mcp = { workspace = true }
hb-project = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-build = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "handbox"
path = "src/main.rs"
