[package]
name = "hb-trace"
description = "Evidence/Trace storage (SQLite)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
